--- a/pom.xml
+++ b/pom.xml
@@ -1,48 +1,72 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.skjolberg</groupId>
-  <artifactId>3d-bin-container-packing</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <name>3D Bin Container Packing</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.skjolberg</groupId>
+	<artifactId>3d-bin-container-packing</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<name>3D Bin Container Packing</name>
 
-   <licenses>
-        <license>
-            <name>The Apache Software License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
+	<properties>
+		<hamcrest.version>1.3</hamcrest.version>
+	</properties>
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
-    <scm>
-        <connection>scm:git:git@github.com:skjolber/3d-bin-container-packing.git</connection>
-        <developerConnection>scm:git:git@github.com:skjolber/3d-bin-container-packing.git</developerConnection>
-        <url>git@github.com:skjolber/3d-bin-container-packing.git</url>
-    </scm>
+	<scm>
+		<connection>scm:git:git@github.com:skjolber/3d-bin-container-packing.git</connection>
+		<developerConnection>scm:git:git@github.com:skjolber/3d-bin-container-packing.git</developerConnection>
+		<url>git@github.com:skjolber/3d-bin-container-packing.git</url>
+	</scm>
 
-    <issueManagement>
-        <system>GitHub</system>
-        <url>https://github.com/skjolber/3d-bin-container-packing/issues</url>
-    </issueManagement>
+	<issueManagement>
+		<system>GitHub</system>
+		<url>https://github.com/skjolber/3d-bin-container-packing/issues</url>
+	</issueManagement>
 
-    <ciManagement>
-        <system>Travis CI</system>
-        <url>https://travis-ci.org/skjolber/3d-bin-container-packing</url>
-    </ciManagement>
-  
-    <developers>
-        <developer>
-            <name>Thomas Skjølberg</name>
-            <email>thomas.skjolberg@gmail.com</email>
-        </developer>
-    </developers>
+	<ciManagement>
+		<system>Travis CI</system>
+		<url>https://travis-ci.org/skjolber/3d-bin-container-packing</url>
+	</ciManagement>
 
-  <dependencies>
-  		<!-- test -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-            <version>4.12</version>
-        </dependency>
-  </dependencies>
+	<developers>
+		<developer>
+			<name>Thomas Skjølberg</name>
+			<email>thomas.skjolberg@gmail.com</email>
+		</developer>
+	</developers>
+
+	<dependencies>
+		<!-- test -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+			<version>4.12</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-core</artifactId>
+			<version>${hamcrest.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
+			<version>${hamcrest.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>${hamcrest.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+	</dependencies>
 </project>
