--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.7.7.201606060606</version>
+				<version>0.7.9</version>
 				<configuration>
 					<excludes>
 						<exclude>com/skjolberg/example/spring/soap/v1/*.class</exclude>
@@ -187,12 +187,19 @@
 		<profile>
 			<!-- mvn -P release release:perform -->
 			<id>release</id>
+			<properties>
+				<!-- this is useful when the desired key is not the default (first)
+					 export GPG_KEY_NAME=ABCDEF01
+				 -->
+				<gpg.executable>gpg</gpg.executable>
+				<gpg.keyname>${env.GPG_KEY_NAME}</gpg.keyname>
+			</properties>
 			<build>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.5</version>
+						<version>1.6</version>
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
