add brute force algorithm limited on time

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
 	</developers>
 
 	<dependencies>
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-collections4</artifactId>
+		    <version>4.1</version>
+		</dependency>
+	
 		<!-- test -->
 		<dependency>
 			<groupId>junit</groupId>
