--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.skjolber</groupId>
 	<artifactId>3d-bin-container-packing</artifactId>
-	<version>1.0.5-SNAPSHOT</version>
+	<version>1.0.5</version>
 	<name>3D Bin Container Packing</name>
 	<description>Library for 3D rectangular bin packing</description>
 	<url>https://github.com/skjolber/3d-bin-container-packing</url>
@@ -30,7 +29,7 @@
 		<connection>scm:git:git@github.com:skjolber/3d-bin-container-packing.git</connection>
 		<developerConnection>scm:git:git@github.com:skjolber/3d-bin-container-packing.git</developerConnection>
 		<url>git@github.com:skjolber/3d-bin-container-packing.git</url>
-		<tag>HEAD</tag>
+		<tag>3d-bin-container-packing-1.0.5</tag>
 	</scm>
 
 	<issueManagement>
