--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,13 @@
 						</goals>
 					</execution>
 					<execution>
+						<id>default-test</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<execution>
 						<id>default-check</id>
 						<goals>
 							<goal>check</goal>
