--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,15 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.7</java.version>
+		<java.version>1.8</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 
+		<mockito.version>2.15.0</mockito.version>
+		<truth.version>0.39</truth.version>
 		<hamcrest.version>1.3</hamcrest.version>
 		<junit.version>4.12</junit.version>
+		<ascii-renderer.version>1.2.1</ascii-renderer.version>
 	</properties>
 	<licenses>
 		<license>
@@ -78,19 +81,19 @@
 		<dependency>
 			<groupId>com.indvd00m.ascii.render</groupId>
 			<artifactId>ascii-render</artifactId>
-			<version>1.2.1</version>
+			<version>${ascii-renderer.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.google.truth</groupId>
 			<artifactId>truth</artifactId>
-			<version>0.39</version>
+			<version>${truth.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>2.15.0</version>
+			<version>${mockito.version}</version>
 			<scope>test</scope>
 		</dependency>
 
