travis vs sonarqube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,4 +7,4 @@ sonar.tests=src/test/java
 #   Java config
 # =====================================================
 sonar.java.source=1.8
-sonar.java.binaries=**/target/classes
+sonar.java.binaries=target/classes
