--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 		<maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
 		<maven-shade-plugin.version>3.1.1</maven-shade-plugin.version>
 		<maven-war-plugin.version>3.2.2</maven-war-plugin.version>
-		<owasp-dependency-check.version>3.2.1</owasp-dependency-check.version>
+		<owasp-dependency-check.version>4.0.0</owasp-dependency-check.version>
 		<pitest.version>1.4.3</pitest.version>
 		
 	</properties>
@@ -218,7 +218,22 @@
 				<artifactId>pitest-maven</artifactId>
 				<version>${pitest.version}</version>
 			</plugin>
-			
+            <plugin>
+                <groupId>org.owasp</groupId>
+                <artifactId>dependency-check-maven</artifactId>
+                <version>${owasp-dependency-check.version}</version>
+                <configuration>
+					<failBuildOnCVSS>7</failBuildOnCVSS>
+					<failOnError>false</failOnError>
+					<!-- suppressionFiles: see https://jeremylong.github.io/DependencyCheck/general/suppression.html -->
+                </configuration>
+                <executions>
+                    <execution>
+						<!-- run only using explicit command -->
+						<phase>none</phase>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
 
