--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,9 @@
 		<java.version>1.8</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
-		
+
+		<gson.version>2.8.5</gson.version>
+
 		<mockito.version>2.25.1</mockito.version>
 		<ascii-renderer.version>2.1.0</ascii-renderer.version>
 		
@@ -72,6 +74,12 @@
 	</developers>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>${gson.version}</version>
+		</dependency>
+
 		<!-- test -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
@@ -225,7 +233,7 @@
 			<!-- mvn -P release release:perform -->
 			<id>release</id>
 			<properties>
-				<!-- this is useful when the desired key is not the default (first) export 
+				<!-- this is useful when the desired key is not the default (first) export
 					GPG_KEY_NAME=ABCDEF01 -->
 				<gpg.executable>gpg</gpg.executable>
 				<gpg.keyname>${env.GPG_KEY_NAME}</gpg.keyname>
