--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,10 @@
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		
-		<mockito.version>2.27.0</mockito.version>
+		<mockito.version>2.28.2</mockito.version>
 		<ascii-renderer.version>2.1.0</ascii-renderer.version>
 		
-		<google-truth.version>0.44</google-truth.version>
+		<google-truth.version>0.45</google-truth.version>
 		<junit.version>5.4.2</junit.version>
 		
 		<!-- plugins -->
@@ -36,7 +36,8 @@
 		<maven-war-plugin.version>3.2.2</maven-war-plugin.version>
 		<owasp-dependency-check.version>4.0.2</owasp-dependency-check.version>
 		<pitest.version>1.4.7</pitest.version>
-		
+		<jqwik.version>1.1.6</jqwik.version>
+		<assertj.version>3.12.2</assertj.version>
 	</properties>
 	
 	<licenses>
@@ -112,13 +113,13 @@
 		<dependency>
 			<groupId>net.jqwik</groupId>
 			<artifactId>jqwik</artifactId>
-			<version>1.1.2</version>
+			<version>${jqwik.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
-			<version>3.12.2</version>
+			<version>${assertj.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -263,6 +264,10 @@
 	</distributionManagement>
 
 	<repositories>
+		<repository>
+			<id>mavenCentral</id>
+			<url>https://repo1.maven.org/maven2</url>
+		</repository>
 		<repository>
 			<id>indvd00m-github-repo</id>
 			<url>https://github.com/indvd00m/maven-repo/raw/master/repository</url>
