--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ sudo: required
 language: java
 jdk:
   - openjdk8
+  - openjdk11
 
 after_success:
   - cd core && mvn clean test jacoco:report coveralls:report
